# suitware

./: .gitignore  Cargo.toml
suitware/: Cargo.toml
suitware-app/: Cargo.toml
suitware-app/src/: main.rs
suitware-diagnostics/: Cargo.toml
suitware-diagnostics/src/: lib.rs
suitware-util/: Cargo.toml
suitware-util/src/: lib.rs
suitware/src/: main.rs  plugins.rs  setup.rs
