[package]
name = "suitware"
version = "0.0.0"
edition = "2021"

[dependencies]
suitware-diagnostics = { path = "../suitware-diagnostics" }

color-eyre = "0.6.1"
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
actix = "0.13.0"
actix-rt = "2.7.0"
suitware-util = { version = "0.1.0", path = "../suitware-util" }

[package.metadata.nix]
build = true
